--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ a {
         <div class="container">
 
         <div class="product">
-            <img src="images.jpg" alt="Produto 1">
+            <img src="eletrica-condominio.jpg" alt="Produto 1">
             <div class="product-details">
                 <h2>ELÉTRICA</h2>
                 <p>Troca de disjuntores.
@@ -175,7 +175,7 @@ a {
     </div>
     <div class="container">
     <div class="product">
-        <img src="images.jpg" alt="Produto 1">
+        <img src="hidraulico.jpg" alt="Produto 1">
         <div class="product-details">
             <h2>HIDRAÚLICA</h2>
             <p> Manutenção corretiva e preventiva de sistemas e equipamentos hidráulico.</p>
@@ -186,7 +186,7 @@ a {
     </div>
     <div class="container">
     <div class="product">
-        <img src="images.jpg" alt="Produto 2">
+        <img src="reformas.jpg" alt="Produto 2">
         <div class="product-details">
             <h2>REFORMAS</h2>
             <p>Reformas em geral, manutenção de calhas e telhados, colocação de azulejos, pisos cerâmicos, porcelanato, pedras e mármores</p>
@@ -198,7 +198,7 @@ a {
     </div>
     <div class="container">
         <div class="product">
-            <img src="images.jpg" alt="Produto 3">
+            <img src="limpeza.jpg" alt="Produto 3">
             <div class="product-details">
                 <h2>LIMPEZA PÓS OBRA</h2>
                 <p>Eliminação de sujeiras, respingos, manchas de tinta, excesso de rejunte, dentre outros resíduos resultantes de uma obra.</p>
@@ -207,10 +207,10 @@ a {
     </div></div> </div>
     <div class="container">
     <div class="product">
-        <img src="images.jpg" alt="Produto 4">
+        <img src="1.jpg" alt="Produto 4">
         <div class="product-details">
             <h2>LIMPEZA DE APARTAMENTOS</h2>
-            <p>Organização e higiene da casa, dos móveis, das louças, dos eletrodomésticos e das roupas.</p>
+            <p>Organização e higiene da casa,apartamento, dos móveis, das louças, dos eletrodomésticos e das roupas.</p>
            <a href="https://wa.me/5511989369526?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%20a limpeza%20de%20apartamento.
            "> <p class="price">ORÇAMENTO</p></a>
         </div>
@@ -219,11 +219,11 @@ a {
         </div>
         <div class="container">
     <div class="product">
-        <img src="images.jpg" alt="Produto 4">
+        <img src="imagem.jpg" alt="Produto 4">
         <div class="product-details">
             <h2>CABEAMENTO ESTRUTURADO REDE DE INTERNET</h2>
-            <p>Instalação de servidores, manutenção de notebooks, PC Desktop, Configuração.</p>
-           <a href="https://wa.me/5511989369526?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%20manunteção,%20rede%20de%20computadores.
+            <p>organizar e padronizar a estrutura de cabos, estrutura de internet, dados e voz.</p>
+           <a href="https://wa.me/5511989369526?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%2cabeamento estruturado.
            "> <p class="price">ORÇAMENTO</p></a>
         </div>
     
@@ -233,20 +233,20 @@ a {
         </div>
         <div class="container">
     <div class="product">
-        <img src="images.jpg" alt="Produto 5">
+        <img src="micro.jpg" alt="Produto 5">
         <div class="product-details">
             <h2>MONTAGEM DE MICRO-COMPUTADORES</h2>
-            <p>Instalação de servidores, manutenção de notebooks, PC Desktop, Configuração.</p>
-           <a href="https://wa.me/5511989369526?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%20manunteção,%20rede%20de%20computadores.
+            <p>Infrastrutura de Cabos, computador para escritorios,.</p>
+           <a href="https://wa.me/5511989369526?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%montagem%20computadores.
            "> <p class="price">ORÇAMENTO</p></a>
         </div></div></div></div>
       <div class="container">
         <div class="product">
-            <img src="images.jpg" alt="Produto 6">
+            <img src="piscinas.jpg" alt="Produto 6">
             <div class="product-details">
                 <h2>MANUNTENAÇÃO DE PISCINAS</h2>
-                <p>Instalação de servidores, manutenção de notebooks, PC Desktop, Configuração.</p>
-               <a href="https://wa.me/5511989369526?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%20manunteção,%20rede%20de%20computadores.
+                <p>Manter a limpeza, higiene e conservação de piscinas.</p>
+               <a href="https://wa.me/5511989369526?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%20manunteção,%20de%20piscinas.
                "> <p class="price">ORÇAMENTO</p></a>
             
         </div>
