--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="LOGO.png" type="image/png"> <!-- Substitua pelo caminho do seu ícone -->
-    <title>Catálogo de Produtos</title>
+    <title>JLS Catálogo de Serviços</title>
     <style>
         body {
 
