--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ a {
         <div class="product">
             <img src="piscinas.jpg" alt="Produto 6">
             <div class="product-details">
-                <h2>MANUNTENAÇÃO DE PISCINAS</h2>
+                <h2>MANUTENÇÃO DE PISCINAS</h2>
                 <p>Manter a limpeza, higiene e conservação de piscinas.</p>
                <a href="https://wa.me/5511989369526?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%20manunteção,%20de%20piscinas.
                "> <p class="price">ORÇAMENTO</p></a>
