--- a/index.html
+++ b/index.html
@@ -118,6 +118,43 @@ a {
     
 </head>
 <body>
+ <script>
+        // Função para criar um cookie
+        function setCookie(name, value, daysToExpire) {
+            const date = new Date();
+            date.setTime(date.getTime() + (daysToExpire * 24 * 60 * 60 * 1000)); // Define a data de expiração
+
+            const expires = "expires=" + date.toUTCString();
+            document.cookie = name + "=" + value + ";" + expires + ";path=/";
+        }
+
+        // Função para ler um cookie
+        function getCookie(name) {
+            const decodedCookie = decodeURIComponent(document.cookie);
+            const cookieArray = decodedCookie.split(";");
+
+            for (let i = 0; i < cookieArray.length; i++) {
+                const cookie = cookieArray[i].trim();
+                if (cookie.startsWith(name + "=")) {
+                    return cookie.substring(name.length + 1);
+                }
+            }
+
+            return "";
+        }
+
+        // Exemplo de uso: cria um cookie chamado "user" com o valor "John" que expira em 7 dias
+        setCookie("user", "John", 7);
+
+        // Exemplo de uso: lê o valor do cookie "user"
+        const username = getCookie("user");
+        if (username !== "") {
+            document.write("Nome de usuário: " + username);
+        } else {
+            document.write("Cookie 'user' não encontrado.");
+        }
+    </script>
+    
     <header>
     <img class="logo" src="LOGO.png" alt="Logo da Sua Empresa"> 
     <!-- Adicione o caminho para o seu logotipo -->
