--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ a {
         <div class="product-details">
             <h2>HIDRAÚLICA</h2>
             <p> Manutenção corretiva e preventiva de sistemas e equipamentos hidráulico.</p>
-           <a href="https://wa.me/5511989369526?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%20manunteção,%20rede%20de%20computadores.
+           <a href="https://wa.me/5511989369526?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%20manunteção,%20equipamentos%20de%20hidraulicos.
            "> <p class="price">ORÇAMENTO</p></a>
         </div>
     </div>
