--- a/index.html
+++ b/index.html
@@ -135,7 +135,18 @@ a {
         <h2>SERVIÇOS</h2>
   </center>
     </header>
+        <div class="container">
 
+        <div class="product">
+            <img src="eletrica-condominio.jpg" alt="Produto 1">
+            <div class="product-details">
+                <h2>SMART HOME</h2>
+                <p>Instalações em automação residencial, integração com Alexa, automação de cortinas, iluminação, portões, cameras e outros dispositivos.</p>
+               <a href="https://wa.me/5511989369526?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%20serviços%20de%20Elétrica.
+               "> <p class="price">ORÇAMENTO</p></a>
+        
+        </div>
+        </div>
     <div class="container">
         <div class="product">
             <img src="images.jpg" alt="Produto 1">
