--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ a {
                 <p>Instalações em automação residencial, integração com Alexa, automação de cortinas, iluminação, portões, cameras e outros dispositivos.</p>
                <a href="https://wa.me/5511989369526?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%20serviços%20de%20Elétrica.
                "> <p class="price">ORÇAMENTO</p></a>
-        
+            </div>
         </div>
         </div>
     <div class="container">
